--- a/index.css
+++ b/index.css
@@ -1,4 +1,9 @@
-button {
-    background-color: red;
-    border-radius: 10px;
+body {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	overflow: hidden;
+	background: #f0f0f0;
 }
